# coding-test-practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.gradle  requirements.txt
coding-test-python-practice/: .gitignore  pyproject.toml  requirements.txt
programmers/: CMakeLists.txt
programmers/12939/: CMakeLists.txt  min_max_values.cpp  min_max_values_test.cpp
programmers/1844/: target_number.py  test_target_number.py
programmers/42883/: CMakeLists.txt  make_big_number.cpp  make_big_number.h  make_big_number_test.cpp
programmers/43105/: CMakeLists.txt  integer_triangle.cpp  integer_triangle.h  integer_triangle_test.cpp
programmers/43163/: CMakeLists.txt  word_conversion.cpp  word_conversion.h  word_conversion_test.cpp
programmers/43164/: CMakeLists.txt  travel_route.cpp  travel_route.h  travel_route_test.cpp
programmers/43165/: test_shortest_distance_game_map.py
programmers/64063/: CMakeLists.txt  allocation_room_number.cpp  allocation_room_number.h  allocation_room_number_others.cpp  allocation_room_number_test.cpp
programmers/72411/: CMakeLists.txt  menu_renewal.cpp
programmers/problem12909/: CorrectParenthesis_Char.java  CorrectParenthesis_Integer.java  CorrectParenthesis_Split.java  CorrectParenthesis_Stream.java  CorrectParenthesis_StringBuilder.java  CorrectParenthesis_Substring.java
programmers/problem12911/: NextBigNumber.java
programmers/problem12914/: LongJump.java
programmers/problem12924/: NumberExpression.java
programmers/problem12939/: CMakeLists.txt  min_max_values.h
programmers/problem12941/: MinimumValue.java
programmers/problem12945/: FibonacciNumber_BottomUp.java  FibonacciNumber_TopDown.java
programmers/problem12949/: MatrixMultiplication.java
(+98 files in other folders)
