[tool.poetry]
name = "coding-test-python-practice"
version = "0.1.0"
description = "Coding test practice for Programmers problems"
authors = ["Jinseong Ha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pytest-benchmark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
