add_subdirectory(problem12939)
add_subdirectory(problem42883)
add_subdirectory(problem42898)
add_subdirectory(problem43105)
add_subdirectory(problem43162)
add_subdirectory(problem43163)
add_subdirectory(problem43164)
add_subdirectory(problem60059)
add_subdirectory(problem64063)
add_subdirectory(problem72411)
add_subdirectory(problem150365)
